# dj-dcms

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  package-lock.json  package.json  pyproject.toml
core/: settings.py  urls.py  views.py
core/http/: __init__.py  htmx_redirect.py
static/css/: style.css
static/js/: theme-toggle.js
static/js/user/: login.js
templates/: base.html
templates/pages/dashboard/: index.html  sidebar.html
templates/pages/login/: index.html
templates/user/: base_auth.html  login.html  signup.html
templates/user/partials/: login_form.html  toast_form_errors.html
user/: admin.py  urls.py  views.py
user/forms/: __init__.py  auth.py  signup.py
user/managers/: __init__.py  user.py
user/migrations/: 0001_initial.py  0002_profile_middle_name_alter_profile_first_name_and_more.py  0003_alter_profile_avatar.py
user/models/: __init__.py  profile.py  user.py  utils.py
